docs(readme): 更新文档并添加中文说明
- 重写项目标题和描述，明确作为eGPS2扩展模块的定位
- 添加项目概述、环境要求和构建说明
- 提供详细的编译和打包命令
- 说明部署到eGPS2的方法和运行参数配置
- 新增中文版README文档，包含完整的项目说明
- 补充目录结构说明和编译警告处理指南